Update dependencies and add java 17 build.
CGLib replaced with Byte Buddy since Spock would not work with it on newer java versions.